fix(web-components): updated side navigation z-index
Items and components from other DS were appearing above the expanded drawer of ic-side-nav, a new
Z-index has been applied which stops this behaviour. Also z-index variable added for side-nav and
banner

#322

--- a/packages/web-components/src/components/ic-classification-banner/ic-classification-banner.css
+++ b/packages/web-components/src/components/ic-classification-banner/ic-classification-banner.css
@@ -6,7 +6,7 @@
   bottom: 0;
   width: 100%;
   height: var(--ic-space-lg);
-  z-index: var(--ic-z-index-overlay);
+  z-index: var(--ic-z-index-classification-banner);
 }
 
 :host(.inline) {
